[package]
name = "tagthing"
version = "0.1.0"
edition = "2021"

[profile.dev]
incremental = true
debug = 0

[profile.release]
incremental = true
debug = 0

[dependencies]
exempi2 = "0.2.0"
chrono = "0.4.39"
iced = { version = "0.13.1", features = ["image", "lazy"] }
tokio = { version = "1.44.0", features = ["full"] }
